cmake_minimum_required(VERSION 3.16..3.22)
set (this mainApp)
project(${this} C CXX)
include(CTest)
set(CMAKE_CXX_STANDARD 17)
add_library(order order.h order.cpp)
add_library(customer customer.h customer.cpp)
add_library(item item.h item.cpp)
add_library(interface interface.h interface.cpp)
set(prlib order customer item interface)
add_executable(${this} main.cpp)
target_link_libraries(${this} PUBLIC ${prlib})   
enable_testing()
add_subdirectory(test)
